== master

* Remove PhoneNumber#display_value in favor of using the Rails helper
* Add dependency on Rails 2.3
* Remove dependency on plugins_plus

== 0.1.0 / 2008-12-14

* Remove the PluginAWeek namespace

== 0.0.5 / 2008-10-26

* Change how the base module is included to prevent namespacing conflicts
* Change PhoneNumber#to_s to PhoneNumber#display_value

== 0.0.4 / 2008-06-22

* Remove log files from gems

== 0.0.3 / 2008-05-05

* Updated documentation

== 0.0.2 / 2007-09-26

* Move test fixtures out of the test application root directory

== 0.0.1 / 2007-08-21

* Added documentation
* Removed dependency on has_association_helper